--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <header class="header">
@@ -146,7 +146,12 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
-              <img src="./images/teamcard1.jpg" width="270" alt="Игорь Демьяненко" class="img" />
+              <img
+                src="./images/teamcard1.jpg"
+                width="270"
+                alt="Игорь Демьяненко"
+                class="team__img"
+              />
               <div class="team__notify">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p lang="en" class="team__position">Product Designer</p>
@@ -183,7 +188,7 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./images/teamcard2.jpg" width="270" alt="Ольга Репина" class="img" />
+              <img src="./images/teamcard2.jpg" width="270" alt="Ольга Репина" class="team__img" />
               <div class="team__notify">
                 <h3 class="team__name">Ольга Репина</h3>
                 <p lang="en" class="team__position">Frontend Developer</p>
@@ -220,7 +225,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./images/teamcard3.jpg" width="270" alt="Николай Тарасов" class="img" />
+              <img
+                src="./images/teamcard3.jpg"
+                width="270"
+                alt="Николай Тарасов"
+                class="team__img"
+              />
               <div class="team__notify">
                 <h3 class="team__name">Николай Тарасов</h3>
                 <p lang="en" class="team__position">Marketing</p>
@@ -257,7 +267,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./images/teamcard4.jpg" width="270" alt="Михаил Ермаков" class="img" />
+              <img
+                src="./images/teamcard4.jpg"
+                width="270"
+                alt="Михаил Ермаков"
+                class="team__img"
+              />
               <div class="team__notify">
                 <h3 class="team__name">Михаил Ермаков</h3>
                 <p lang="en" class="team__position">UI Designer</p>
