--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
       <div class="footer__container container">
         <h2 class="visually-hidden">Адрес и социальные сети</h2>
         <div class="footer__address-meta">
-          <a href="./index.html" title="Главная страница WebStudio" class="logo"
+          <a href="./index.html" title="Главная страница WebStudio" class="logo logo--footer"
             ><span class="logo__accent">Web</span><span class="logo__text--footer">Studio</span>
           </a>
           <address class="footer__address">г. Киев, пр-т Леси Украинки, 26</address>
