--- a/index.html
+++ b/index.html
@@ -152,77 +152,73 @@
                 alt="Игорь Демьяненко"
                 class="team__img"
               />
-              <div class="team__notify">
-                <h3 class="team__name">Игорь Демьяненко</h3>
-                <p lang="en" class="team__position">Product Designer</p>
-                <ul class="soc-list">
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              <h3 class="team__name">Игорь Демьяненко</h3>
+              <p lang="en" class="team__position">Product Designer</p>
+              <ul class="soc-list">
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__item">
               <img src="./images/teamcard2.jpg" width="270" alt="Ольга Репина" class="team__img" />
-              <div class="team__notify">
-                <h3 class="team__name">Ольга Репина</h3>
-                <p lang="en" class="team__position">Frontend Developer</p>
-                <ul class="soc-list">
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              <h3 class="team__name">Ольга Репина</h3>
+              <p lang="en" class="team__position">Frontend Developer</p>
+              <ul class="soc-list">
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__item">
               <img
@@ -231,40 +227,38 @@
                 alt="Николай Тарасов"
                 class="team__img"
               />
-              <div class="team__notify">
-                <h3 class="team__name">Николай Тарасов</h3>
-                <p lang="en" class="team__position">Marketing</p>
-                <ul class="soc-list">
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              <h3 class="team__name">Николай Тарасов</h3>
+              <p lang="en" class="team__position">Marketing</p>
+              <ul class="soc-list">
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__item">
               <img
@@ -273,40 +267,38 @@
                 alt="Михаил Ермаков"
                 class="team__img"
               />
-              <div class="team__notify">
-                <h3 class="team__name">Михаил Ермаков</h3>
-                <p lang="en" class="team__position">UI Designer</p>
-                <ul class="soc-list">
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="soc-list__item">
-                    <a href="#" class="soc-list__link">
-                      <svg class="soc-list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              <h3 class="team__name">Михаил Ермаков</h3>
+              <p lang="en" class="team__position">UI Designer</p>
+              <ul class="soc-list">
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-list__item">
+                  <a href="#" class="soc-list__link">
+                    <svg class="soc-list__icon" width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -367,7 +359,7 @@
         <h2 class="visually-hidden">Адрес и социальные сети</h2>
         <div class="footer__address-meta">
           <a href="./index.html" title="Главная страница WebStudio" class="logo logo--footer"
-            ><span class="logo__accent">Web</span><span class="logo__text--footer">Studio</span>
+            ><span class="logo__accent">Web</span><span class="logo--footer__text">Studio</span>
           </a>
           <address class="footer__address">г. Киев, пр-т Леси Украинки, 26</address>
           <ul class="footer__contact-list">
@@ -424,7 +416,7 @@
               placeholder="E-mail"
             />
             <button type="submit" class="subscribe__btn">
-              <b class="subscribe__text">Подписаться</b>
+              <p class="subscribe__text">Подписаться</p>
               <svg class="soc-list__icon" width="24" height="24">
                 <use href="./images/icons.svg#telegram"></use>
               </svg>
