--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
     <footer class="footer">
       <div class="footer__container container">
         <h2 class="visually-hidden">Адрес и социальные сети</h2>
-        <div class="footer__address-meta">
+        <div class="footer__address">
           <a href="./index.html" title="Главная страница WebStudio" class="logo logo--footer"
             ><span class="logo__accent">Web</span><span class="logo--footer__text">Studio</span>
           </a>
-          <address class="footer__address">г. Киев, пр-т Леси Украинки, 26</address>
+          <address class="footer__address-meta">г. Киев, пр-т Леси Украинки, 26</address>
           <ul class="footer__contact-list">
             <li class="footer__contact-item">
               <a href="mailto:info@example.com" class="footer__contact-link">info@example.com</a>
