--- a/index.html
+++ b/index.html
@@ -357,52 +357,54 @@
     <footer class="footer">
       <div class="footer__container container">
         <h2 class="visually-hidden">Адрес и социальные сети</h2>
-        <div class="footer__address">
-          <a href="./index.html" title="Главная страница WebStudio" class="logo logo--footer"
-            ><span class="logo__accent">Web</span><span class="logo--footer__text">Studio</span>
-          </a>
-          <address class="footer__address-meta">г. Киев, пр-т Леси Украинки, 26</address>
-          <ul class="footer__contact-list">
-            <li class="footer__contact-item">
-              <a href="mailto:info@example.com" class="footer__contact-link">info@example.com</a>
-            </li>
-            <li class="footer__contact-item">
-              <a href="tel:+380991111111" class="footer__contact-link">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer__soc-list">
-          <p class="footer__title">Присоединяйтесь</p>
-          <ul class="soc-list">
-            <li class="soc-list__item">
-              <a href="#" class="soc-list__link footer__soc-list-link">
-                <svg class="soc-list__icon" width="20" height="20">
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="soc-list__item">
-              <a href="#" class="soc-list__link footer__soc-list-link">
-                <svg class="soc-list__icon" width="20" height="20">
-                  <use href="./images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="soc-list__item">
-              <a href="#" class="soc-list__link footer__soc-list-link">
-                <svg class="soc-list__icon" width="20" height="20">
-                  <use href="./images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="soc-list__item">
-              <a href="#" class="soc-list__link footer__soc-list-link">
-                <svg class="soc-list__icon" width="20" height="20">
-                  <use href="./images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer__meta">
+          <div class="footer__address">
+            <a href="./index.html" title="Главная страница WebStudio" class="logo logo--footer"
+              ><span class="logo__accent">Web</span><span class="logo--footer__text">Studio</span>
+            </a>
+            <address class="footer__address-meta">г. Киев, пр-т Леси Украинки, 26</address>
+            <ul class="footer__contact-list">
+              <li class="footer__contact-item">
+                <a href="mailto:info@example.com" class="footer__contact-link">info@example.com</a>
+              </li>
+              <li class="footer__contact-item">
+                <a href="tel:+380991111111" class="footer__contact-link">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__soc-list">
+            <p class="footer__title">Присоединяйтесь</p>
+            <ul class="soc-list">
+              <li class="soc-list__item">
+                <a href="#" class="soc-list__link footer__soc-list-link">
+                  <svg class="soc-list__icon" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-list__item">
+                <a href="#" class="soc-list__link footer__soc-list-link">
+                  <svg class="soc-list__icon" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-list__item">
+                <a href="#" class="soc-list__link footer__soc-list-link">
+                  <svg class="soc-list__icon" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-list__item">
+                <a href="#" class="soc-list__link footer__soc-list-link">
+                  <svg class="soc-list__icon" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <form class="footer__subscribe">
           <p class="footer__title">Подпишитесь на рассылку</p>
@@ -438,7 +440,7 @@
           <div class="form__group">
             <div class="form__field">
               <label for="name" class="form__label">Имя</label>
-              <div class="input-box">
+              <div class="form__input-box">
                 <input class="form__input" type="text" name="user-name" id="name" autofocus />
                 <svg class="form__icon" width="18" height="18">
                   <use href="./images/icons.svg#person-form-icon"></use>
@@ -448,7 +450,7 @@
 
             <div class="form__field">
               <label for="tel" class="form__label">Телефон</label>
-              <div class="input-box">
+              <div class="form__input-box">
                 <input class="form__input" type="tel" name="tel" id="tel" />
                 <svg class="form__icon" width="18" height="18">
                   <use href="./images/icons.svg#phone-form-icon"></use>
@@ -458,7 +460,7 @@
 
             <div class="form__field">
               <label for="email" class="form__label">Почта</label>
-              <div class="input-box">
+              <div class="form__input-box">
                 <input class="form__input" type="email" name="email" id="email" autocomplete="on" />
                 <svg class="form__icon" width="18" height="18">
                   <use href="./images/icons.svg#email-form-icon"></use>
