--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   <body>
     <header class="header">
       <div class="header__container container">
+        <a href="./index.html" title="Главная страница WebStudio" class="logo">
+          <span class="logo__accent">Web</span>Studio
+        </a>
         <nav class="header__nav">
-          <a href="./index.html" title="Главная страница WebStudio" class="logo"
-            ><span class="logo__accent">Web</span>Studio</a
-          >
-          <p></p>
           <ul class="site-nav">
             <li class="site-nav__item">
               <a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a>
@@ -490,8 +489,8 @@
               <svg class="form__privacy-check-icon" width="16" height="15">
                 <use href="./images/icons.svg#policy-check-icon"></use>
               </svg>
-              Соглашаюсь с рассылкой и принимаю
-              <a class="form__policy-link" target="_blank" href="#"> Условия договора</a>
+              <p class="form__policy-text">Соглашаюсь с рассылкой и принимаю</p>
+              <a class="form__policy-link" target="_blank" href="#">Условия договора</a>
             </label>
           </div>
 
