--- a/index.html
+++ b/index.html
@@ -121,19 +121,37 @@
             <li class="our-works__item">
               <h3 class="our-works__title">Десктопные приложения</h3>
               <a href="#">
-                <img src="./images/box1.jpg" width="370" alt="Десктопные приложения" class="img" />
+                <img
+                  srcset="./images/box1-desktop.jpg 1x, ./images/box1-desktop-2x.jpg 2x"
+                  src="./images/box1.jpg"
+                  alt="Десктопные приложения"
+                  width="370"
+                  class="img"
+                />
               </a>
             </li>
             <li class="our-works__item">
               <h3 class="our-works__title">Мобильные приложения</h3>
               <a href="#">
-                <img src="./images/box2.jpg" width="370" alt="Мобильные приложения" class="img" />
+                <img
+                  srcset="./images/box2-desktop.jpg 1x, ./images/box2-desktop-2x.jpg 2x"
+                  src="./images/box1.jpg"
+                  alt="Мобильные приложения"
+                  width="370"
+                  class="img"
+                />
               </a>
             </li>
             <li class="our-works__item">
               <h3 class="our-works__title">Дизайнерские решения</h3>
               <a href="#">
-                <img src="./images/box3.jpg" width="370" alt="Дизайнерские решения" class="img" />
+                <img
+                  srcset="./images/box3-desktop.jpg 1x, ./images/box3-desktop-2x.jpg 2x"
+                  src="./images/box1.jpg"
+                  alt="Дизайнерские решения"
+                  width="370"
+                  class="img"
+                />
               </a>
             </li>
           </ul>
@@ -145,12 +163,26 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
-              <img
-                src="./images/teamcard1.jpg"
-                width="270"
-                alt="Игорь Демьяненко"
-                class="team__img"
-              />
+              <picture>
+                <source
+                  srcset="./images/teamcard1-desktop.jpg 1x, ./images/teamcard1-desktop-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/teamcard1-tablet.jpg 1x, ./images/teamcard1-tablet-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/teamcard1-mobile.jpg 1x, ./images/teamcard1-mobile-2x.jpg 2x"
+                  media="(min-width: 320px)"
+                />
+                <img
+                  src="./images/teamcard1-mobile.jpg"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
+                  alt="Игорь Демьяненко"
+                  class="team__img"
+                />
+              </picture>
               <h3 class="team__name">Игорь Демьяненко</h3>
               <p lang="en" class="team__position">Product Designer</p>
               <ul class="soc-list">
@@ -185,7 +217,26 @@
               </ul>
             </li>
             <li class="team__item">
-              <img src="./images/teamcard2.jpg" width="270" alt="Ольга Репина" class="team__img" />
+              <picture>
+                <source
+                  srcset="./images/teamcard2-desktop.jpg 1x, ./images/teamcard2-desktop-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/teamcard2-tablet.jpg 1x, ./images/teamcard2-tablet-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/teamcard2-mobile.jpg 1x, ./images/teamcard2-mobile-2x.jpg 2x"
+                  media="(min-width: 320px)"
+                />
+                <img
+                  src="./images/teamcard2-mobile.jpg"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
+                  alt="Ольга Репина"
+                  class="team__img"
+                />
+              </picture>
               <h3 class="team__name">Ольга Репина</h3>
               <p lang="en" class="team__position">Frontend Developer</p>
               <ul class="soc-list">
@@ -220,12 +271,26 @@
               </ul>
             </li>
             <li class="team__item">
-              <img
-                src="./images/teamcard3.jpg"
-                width="270"
-                alt="Николай Тарасов"
-                class="team__img"
-              />
+              <picture>
+                <source
+                  srcset="./images/teamcard3-desktop.jpg 1x, ./images/teamcard3-desktop-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/teamcard3-tablet.jpg 1x, ./images/teamcard3-tablet-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/teamcard3-mobile.jpg 1x, ./images/teamcard3-mobile-2x.jpg 2x"
+                  media="(min-width: 320px)"
+                />
+                <img
+                  src="./images/teamcard3-mobile.jpg"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
+                  alt="Николай Тарасов"
+                  class="team__img"
+                />
+              </picture>
               <h3 class="team__name">Николай Тарасов</h3>
               <p lang="en" class="team__position">Marketing</p>
               <ul class="soc-list">
@@ -260,12 +325,26 @@
               </ul>
             </li>
             <li class="team__item">
-              <img
-                src="./images/teamcard4.jpg"
-                width="270"
-                alt="Михаил Ермаков"
-                class="team__img"
-              />
+              <picture>
+                <source
+                  srcset="./images/teamcard4-desktop.jpg 1x, ./images/teamcard4-desktop-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/teamcard4-tablet.jpg 1x, ./images/teamcard4-tablet-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/teamcard4-mobile.jpg 1x, ./images/teamcard4-mobile-2x.jpg 2x"
+                  media="(min-width: 320px)"
+                />
+                <img
+                  src="./images/teamcard4-mobile.jpg"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
+                  alt="Михаил Ермаков"
+                  class="team__img"
+                />
+              </picture>
               <h3 class="team__name">Михаил Ермаков</h3>
               <p lang="en" class="team__position">UI Designer</p>
               <ul class="soc-list">
