--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img src="./images/project1.jpg" width="370" alt="Технокряк" class="img" />
+                  <picture>
+                    <source
+                      srcset="./images/project1-desktop.jpg 1x, ./images/project1-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project1-tablet.jpg 1x, ./images/project1-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project1-mobile.jpg 1x, ./images/project1-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project1-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Технокряк"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -99,12 +118,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img
-                    src="./images/project2.jpg"
-                    width="370"
-                    alt="Постер New Orlean vs Golden Star"
-                    class="img"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/project2-desktop.jpg 1x, ./images/project2-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project2-tablet.jpg 1x, ./images/project2-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project2-mobile.jpg 1x, ./images/project2-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project2-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Постер New Orlean vs Golden Star"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -124,7 +157,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img src="./images/project3.jpg" width="370" alt="Ресторан Seafood" class="img" />
+                  <picture>
+                    <source
+                      srcset="./images/project3-desktop.jpg 1x, ./images/project3-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project3-tablet.jpg 1x, ./images/project3-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project3-mobile.jpg 1x, ./images/project3-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project3-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Ресторан Seafoodr"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -133,7 +185,6 @@
                     </p>
                   </div>
                 </div>
-
                 <div class="project-card-notify">
                   <h3 class="projects-company">Ресторан <span lang="en">Seafood</span></h3>
                   <p class="projects-type">Приложение</p>
@@ -143,7 +194,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img src="./images/project4.jpg" width="370" alt="Проект Prime" class="img" />
+                  <picture>
+                    <source
+                      srcset="./images/project4-desktop.jpg 1x, ./images/project4-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project4-tablet.jpg 1x, ./images/project4-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project4-mobile.jpg 1x, ./images/project4-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project4-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Проект Prime"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -161,7 +231,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img src="./images/project5.jpg" width="370" alt="Проект Boxes" class="img" />
+                  <picture>
+                    <source
+                      srcset="./images/project5-desktop.jpg 1x, ./images/project5-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project5-tablet.jpg 1x, ./images/project5-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project5-mobile.jpg 1x, ./images/project5-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project5-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Проект Boxes"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -179,12 +268,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img
-                    src="./images/project6.jpg"
-                    width="370"
-                    alt="Inspiration has no Borders"
-                    class="img"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/project6-desktop.jpg 1x, ./images/project6-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project6-tablet.jpg 1x, ./images/project6-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project6-mobile.jpg 1x, ./images/project6-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project6-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Inspiration has no Borders"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -193,7 +296,6 @@
                     </p>
                   </div>
                 </div>
-
                 <div class="project-card-notify">
                   <h3 class="projects-company" lang="en">Inspiration has no Borders</h3>
                   <p class="projects-type">Веб-сайт</p>
@@ -203,12 +305,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img
-                    src="./images/project7.jpg"
-                    width="370"
-                    alt="Издание Limited Edition"
-                    class="img"
-                  />
+                  <picture>
+                    <source
+                      srcset="./images/project7-desktop.jpg 1x, ./images/project7-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project7-tablet.jpg 1x, ./images/project7-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project7-mobile.jpg 1x, ./images/project7-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project7-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Издание Limited Edition"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -226,7 +342,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img src="./images/project8.jpg" width="370" alt="Проект LAB" class="img" />
+                  <picture>
+                    <source
+                      srcset="./images/project8-desktop.jpg 1x, ./images/project8-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project8-tablet.jpg 1x, ./images/project8-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project8-mobile.jpg 1x, ./images/project8-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project8-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Проект LAB"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -235,7 +370,6 @@
                     </p>
                   </div>
                 </div>
-
                 <div class="project-card-notify">
                   <h3 class="projects-company">Проект <span lang="en">LAB</span></h3>
                   <p class="projects-type">Маркетинг</p>
@@ -245,7 +379,26 @@
             <li class="project-card">
               <a href="#" class="project-link">
                 <div class="overlay-card-box">
-                  <img src="./images/project9.jpg" width="370" alt="Growing Business" class="img" />
+                  <picture>
+                    <source
+                      srcset="./images/project9-desktop.jpg 1x, ./images/project9-desktop-2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/project9-tablet.jpg 1x, ./images/project9-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/project9-mobile.jpg 1x, ./images/project9-mobile-2x.jpg 2x"
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/project9-mobile.jpg"
+                      sizes="(min-width: 1200px) 33.3vw, (min-width: 768px) 50vw, 100vw"
+                      alt="Growing Business"
+                      class="img"
+                    />
+                  </picture>
                   <div class="project-card-overlay">
                     <p class="card-overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -254,7 +407,6 @@
                     </p>
                   </div>
                 </div>
-
                 <div class="project-card-notify">
                   <h3 class="projects-company" lang="en">Growing Business</h3>
                   <p class="projects-type">Приложение</p>
