--- a/portfolio.html
+++ b/portfolio.html
@@ -17,40 +17,83 @@
     <header class="header">
       <div class="header__container container">
         <nav class="header__nav">
-          <a href="./index.html" title="Главная страница WebStudio" class="logo"
-            ><span class="logo__accent">Web</span>Studio</a
+          <a href="./index.html" title="Главная страница WebStudio" class="logo">
+            <span class="logo__accent">Web</span>Studio
+          </a>
+          <button
+            type="button"
+            class="header__mob-menu-button menu-open-btn"
+            aria-expanded="false"
+            aria-controls="mob-menu"
           >
-          <p></p>
+            <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
+              <use class="header__icon-mob-menu" href="./images/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
           <ul class="site-nav">
             <li class="site-nav__item">
-              <a href="./index.html" class="site-nav__link">Студия</a>
+              <a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a>
             </li>
             <li class="site-nav__item">
-              <a href="./portfolio.html" class="site-nav__link site-nav__link--current"
-                >Портфолио</a
-              >
+              <a href="./portfolio.html" class="site-nav__link">Портфолио</a>
             </li>
             <li class="site-nav__item"><a href="#" class="site-nav__link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="header-contacts">
-          <li class="header-contacts__item">
-            <a href="mailto:info@devstudio.com" class="header-contacts__link">
-              <svg class="header-contacts__icon" width="16" height="12">
+        <ul class="header__contacts-list">
+          <li class="header__contacts-item">
+            <a href="mailto:info@devstudio.com" class="header__contacts-link">
+              <svg class="header__contacts-icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="header-contacts__item">
-            <a href="tel:+380961111111" class="header-contacts__link">
-              <svg class="header-contacts__icon" width="10" height="16">
+          <li class="header__contacts-item">
+            <a href="tel:+380961111111" class="header__contacts-link">
+              <svg class="header__contacts-icon" width="10" height="16">
                 <use href="./images/icons.svg#phone"></use>
               </svg>
               +38 096 111 11 11
             </a>
           </li>
         </ul>
+        <!-- mob-menu -->
+        <div class="mob-menu">
+          <button
+            type="button"
+            class="header__mob-menu-button menu-close-btn"
+            aria-expanded="false"
+            aria-controls="header__nav-box"
+          >
+            <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
+              <use class="header__icon-mob-menu" href="./images/icons.svg#icon-close-menu"></use>
+            </svg>
+          </button>
+          <ul class="mob-menu__nav">
+            <li class="mob-menu__nav-item">
+              <a href="./index.html" class="mob-menu__nav-link mob-menu__nav-link--current">
+                Студия
+              </a>
+            </li>
+            <li class="mob-menu__nav-item">
+              <a href="./portfolio.html" class="mob-menu__nav-link">Портфолио</a>
+            </li>
+            <li class="mob-menu__nav-item">
+              <a href="#" class="mob-menu__nav-link">Контакты</a>
+            </li>
+          </ul>
+          <ul class="mob-menu__contacts-list">
+            <li class="mob-menu__contacts-list-item">+38 096 111 11 11</li>
+            <li class="mob-menu__contacts-list-item">info@devstudio.com</li>
+          </ul>
+          <ul class="mob-menu__soc-list">
+            <li class="mob-menu__soc-list-item">Instagram</li>
+            <li class="mob-menu__soc-list-item">Twitter</li>
+            <li class="mob-menu__soc-list-item">Facebook</li>
+            <li class="mob-menu__soc-list-item">LinkedIn</li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
